--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,16 @@
+@import url('./fonts.css');
 @import './base.css';
 
+body {
+    background-color: #e1d0a5;
+    font-size: 16px;
+}
+
 #app {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 2rem;
+    font-weight: normal;
+    font-family: lato;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}
